fixed background being at wrong position

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-image: url(./bg.png);
+    background-position: center;
     justify-content: center;
     height: 98vh;
     align-items: stretch;
